plugins/ffi/jolt/jolt_ffi.h

typedef class_type CollisionShape CollisionShape;
typedef class_type WorldBody WorldBody;
FFI_PLUGIN_EXPORT void destroy_shape(CollisionShape* shape);
// Bodies.
FFI_PLUGIN_EXPORT void body_set_position(WorldBody* body, float* v4);
FFI_PLUGIN_EXPORT void body_set_rotation(WorldBody* body, float* q4);
FFI_PLUGIN_EXPORT void body_get_position(WorldBody* body, float* v4);
FFI_PLUGIN_EXPORT void body_get_rotation(WorldBody* body, float* q4);
FFI_PLUGIN_EXPORT void body_get_world_matrix(WorldBody* body, float* m16);
FFI_PLUGIN_EXPORT void body_get_com_matrix(WorldBody* body, float* m16);
FFI_PLUGIN_EXPORT void body_set_active(WorldBody* body, bool activate);
FFI_PLUGIN_EXPORT bool body_get_active(WorldBody* body);
FFI_PLUGIN_EXPORT void set_body_dart_owner(WorldBody* body, Dart_Handle owner);
FFI_PLUGIN_EXPORT Dart_Handle get_body_dart_owner(WorldBody* body);
FFI_PLUGIN_EXPORT void destroy_body(WorldBody* body);