lib/physics/src/jolt_ffi_generated.dart


  late final _destroy_shapePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CollisionShape>)>>(
      'destroy_shape');
  late final _destroy_shape = _destroy_shapePtr
      .asFunction<void Function(ffi.Pointer<CollisionShape>)>();

  /// Bodies.
  void body_set_position(
    ffi.Pointer<WorldBody> body,
    ffi.Pointer<ffi.Float> v4,
  ) {
    return _body_set_position(
      body,
      v4,
    );
  }

  late final _body_set_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WorldBody>,
              ffi.Pointer<ffi.Float>)>>('body_set_position');
  late final _body_set_position = _body_set_positionPtr.asFunction<
      void Function(
          ffi.Pointer<WorldBody>, ffi.Pointer<ffi.Float>)>(isLeaf: true);

  void body_set_rotation(
    ffi.Pointer<WorldBody> body,
    ffi.Pointer<ffi.Float> q4,
  ) {
    return _body_set_rotation(
      body,
      q4,
    );
  }

  late final _body_set_rotationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WorldBody>,
              ffi.Pointer<ffi.Float>)>>('body_set_rotation');
  late final _body_set_rotation = _body_set_rotationPtr.asFunction<
      void Function(
          ffi.Pointer<WorldBody>, ffi.Pointer<ffi.Float>)>(isLeaf: true);

  void body_get_position(
    ffi.Pointer<WorldBody> body,
    ffi.Pointer<ffi.Float> v4,
  ) {
    return _body_get_position(
      body,
      v4,
    );
  }

  late final _body_get_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WorldBody>,
              ffi.Pointer<ffi.Float>)>>('body_get_position');
  late final _body_get_position = _body_get_positionPtr.asFunction<
      void Function(
          ffi.Pointer<WorldBody>, ffi.Pointer<ffi.Float>)>(isLeaf: true);

  void body_get_rotation(
    ffi.Pointer<WorldBody> body,
    ffi.Pointer<ffi.Float> q4,
  ) {
    return _body_get_rotation(
      body,
      q4,
    );
  }

  late final _body_get_rotationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WorldBody>,
              ffi.Pointer<ffi.Float>)>>('body_get_rotation');
  late final _body_get_rotation = _body_get_rotationPtr.asFunction<
      void Function(
          ffi.Pointer<WorldBody>, ffi.Pointer<ffi.Float>)>(isLeaf: true);

  void body_get_world_matrix(
    ffi.Pointer<WorldBody> body,
    ffi.Pointer<ffi.Float> m16,
  ) {
    return _body_get_world_matrix(
      body,
      m16,
    );
  }

  late final _body_get_world_matrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WorldBody>,
              ffi.Pointer<ffi.Float>)>>('body_get_world_matrix');
  late final _body_get_world_matrix = _body_get_world_matrixPtr.asFunction<
      void Function(
          ffi.Pointer<WorldBody>, ffi.Pointer<ffi.Float>)>(isLeaf: true);

  void body_get_com_matrix(
    ffi.Pointer<WorldBody> body,
    ffi.Pointer<ffi.Float> m16,
  ) {
    return _body_get_com_matrix(
      body,
      m16,
    );
  }

  late final _body_get_com_matrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WorldBody>,
              ffi.Pointer<ffi.Float>)>>('body_get_com_matrix');
  late final _body_get_com_matrix = _body_get_com_matrixPtr.asFunction<
      void Function(
          ffi.Pointer<WorldBody>, ffi.Pointer<ffi.Float>)>(isLeaf: true);

  void body_set_active(
    ffi.Pointer<WorldBody> body,
    bool activate,
  ) {
    return _body_set_active(
      body,
      activate,
    );
  }

  late final _body_set_activePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<WorldBody>, ffi.Bool)>>(
      'body_set_active');
  late final _body_set_active = _body_set_activePtr
      .asFunction<void Function(ffi.Pointer<WorldBody>, bool)>(isLeaf: true);

  bool body_get_active(
    ffi.Pointer<WorldBody> body,
  ) {
    return _body_get_active(
      body,
    );
  }

  late final _body_get_activePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<WorldBody>)>>(
          'body_get_active');
  late final _body_get_active = _body_get_activePtr
      .asFunction<bool Function(ffi.Pointer<WorldBody>)>(isLeaf: true);

  void set_body_dart_owner(
    ffi.Pointer<WorldBody> body,
    Object owner,
  ) {
    return _set_body_dart_owner(
      body,
      owner,
    );
  }

  late final _set_body_dart_ownerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<WorldBody>, ffi.Handle)>>('set_body_dart_owner');
  late final _set_body_dart_owner = _set_body_dart_ownerPtr
      .asFunction<void Function(ffi.Pointer<WorldBody>, Object)>();

  Object get_body_dart_owner(
    ffi.Pointer<WorldBody> body,
  ) {
    return _get_body_dart_owner(
      body,
    );
  }

  late final _get_body_dart_ownerPtr =
      _lookup<ffi.NativeFunction<ffi.Handle Function(ffi.Pointer<WorldBody>)>>(
          'get_body_dart_owner');
  late final _get_body_dart_owner = _get_body_dart_ownerPtr
      .asFunction<Object Function(ffi.Pointer<WorldBody>)>();

  void destroy_body(
    ffi.Pointer<WorldBody> body,
  ) {
    return _destroy_body(
      body,
    );
  }

  late final _destroy_bodyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WorldBody>)>>(
          'destroy_body');
  late final _destroy_body =
      _destroy_bodyPtr.asFunction<void Function(ffi.Pointer<WorldBody>)>();

  late final addresses = _SymbolAddresses(this);
}
